Incorrect rounding in ceiledLayoutUnit and roundedLayoutUnit. https://bugs.webkit.org/show_bug.cgi?id=91061

Reviewed by Adam Barth.

The two functions are currently both returning the flooredLayoutUnit when subpixel
layout is enabled. This patch changes them to return the correct fractional rounded
value.

* platform/FractionalLayoutUnit.h:
(WebCore::FractionalLayoutUnit::fromFloatCeil):
(FractionalLayoutUnit):
(WebCore::FractionalLayoutUnit::fromFloatRound):
* rendering/LayoutTypes.h:
(WebCore::roundedLayoutUnit):
(WebCore::ceiledLayoutUnit):
* rendering/RenderBlock.cpp:
(WebCore::updatePreferredWidth):


Canonical link: https://commits.webkit.org/110066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123626 268f45cc-cd09-0410-ab3c-d52691b4dbfc